[project]
name = "extended-saveimage-comfyui"
description = "This custom node is largely identical to the usual Save Image but allows saving images also in JPEG and WEBP formats, the latter with both lossless and lossy compression. Metadata is embedded in the images as usual, and the resulting images can be used to load a workflow."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/palant/extended-saveimage-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "extended-saveimage-comfyui"
Icon = ""
